--- a/web/gamestatsonly.html
+++ b/web/gamestatsonly.html
@@ -119,8 +119,11 @@ function flowTimeCompare(a, b) {
 <body>
 	<nav class="navbar navbar-green navbar-fixed-top">
 		<div class="container-fluid">
+			<span class="navbar-brand navbar-logo">
+				<img src="img/logo.png">
+			</span>
 			<div class="navbar-header">
-				<button type="button" class="pull-left navbar-toggle navbar-left" data-toggle="collapse" data-target="#navbarLinks">
+				<button type="button" class="pull-right navbar-toggle navbar-right" data-toggle="collapse" data-target="#navbarLinks">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
